# ChangeLog for media-video/parole
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/parole/ChangeLog,v 1.15 2011/02/05 11:27:08 ssuominen Exp $

  05 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> parole-0.2.0.2-r1.ebuild,
  +files/parole-0.2.0.2-libnotify-0.7.patch:
  Fix building with x11-libs/libnotify >= 0.7.

  05 Nov 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  parole-0.2.0.2-r1.ebuild:
  x86 stable wrt bug #343985

  05 Nov 2010; Markos Chandras <hwoarang@gentoo.org>
  parole-0.2.0.2-r1.ebuild:
  Stable on amd64 wrt bug #343985

*parole-0.2.0.2-r1 (06 Sep 2010)

  06 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +parole-0.2.0.2-r1.ebuild:
  Fix parole-player.so plug-in path wrt #333517 by Daniel Pielmeier.

  27 May 2010; Christoph Mende <angelos@gentoo.org> parole-0.2.0.2.ebuild:
  Removed unused xulrunner dep (bug 320585)

  26 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> parole-0.2.0.2.ebuild,
  +files/parole-0.2.0.2-64bit.patch:
  Fix building with -Werror wrt #302835 by Jesús Guerrero.

  26 Mar 2010; Samuli Suominen <ssuominen@gentoo.org> parole-0.2.0.2.ebuild:
  Use xfconf_use_debug instead of use_enable to control debug flags wrt
  #302835 by Jesús Guerrero.

*parole-0.2.0.2 (25 Jan 2010)

  25 Jan 2010; Jeremy Olexa <darkside@gentoo.org> +parole-0.2.0.2.ebuild:
  Version bump, small bug fix in browser plugin

*parole-0.2.0.1 (20 Jan 2010)

  20 Jan 2010; Jeremy Olexa <darkside@gentoo.org> +parole-0.2.0.1.ebuild:
  Minor version bump with lots of bug fixes.
  http://releases.xfce.org/feeds/project/parole

*parole-0.2.0 (05 Jan 2010)

  05 Jan 2010; Jeremy Olexa <darkside@gentoo.org> -parole-0.1.91.ebuild,
  -parole-0.1.95.ebuild, +parole-0.2.0.ebuild:
  Version bump to the first stable release of parole.
  http://releases.xfce.org/feeds/project/parole

*parole-0.1.99 (11 Dec 2009)

  11 Dec 2009; Christoph Mende <angelos@gentoo.org> +parole-0.1.99.ebuild:
  Version bump