@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX parole-0.2.0.2-64bit.patch 762 RMD160 dafc468e604adfd0223fccefe77d6dae4001cb3d SHA1 9839a02425440bcf20e8e5dc3a7f600e179357f6 SHA256 19ad7008eeada50d794e2166abb122bb0b2355572c7c57431912a4ebd5395c06
 AUX parole-0.2.0.2-libnotify-0.7.patch 697 RMD160 a6bec717fa5757815f7a5c1298d4d8cce4f216f0 SHA1 5f01ef06cd771ca80389b26ffd19ed7c9ff62286 SHA256 83517dcea38739a03663847442a9565e87256238a71def0edfaa482190a9fe40
 DIST parole-0.2.0.2.tar.bz2 644981 RMD160 6d2b5162107a15a8965d1693d33c6ad2e2b8c440 SHA1 4c5b640876c9c4ecd4fc96c29a8b29ae19d61f7a SHA256 c6b669cda652ccfb4b5c6c4aab882bf67bb0a8bd3ee4abe42a9b8fb3e6860195
+DIST parole-0.2.0.5.tar.bz2 633483 RMD160 31cc24ee05586226ba07af6d597e865797eb77b6 SHA1 30ffba07d5bfeeb29a875d4bc7b635a981f68d3a SHA256 b4688cfed14213d0d3d565fd5d53ababb0d514177be252617a3c814f0cac3190
 EBUILD parole-0.2.0.2-r1.ebuild 1355 RMD160 1b7e42e5511edd954199bcaaa29b3baa8666ce8a SHA1 3055667da3d42e06cfd0b1a172e36dd9035f324e SHA256 066515b1a59b34c626b59f75c9a8be9c5cfdc52f47d4b9c5d0b60d3043de6ca0
-MISC ChangeLog 2621 RMD160 046c8dfa352fdb10dab131ac2312002f0f1592f7 SHA1 39cb652ff117cce9d3d2c2401d7594850ed1d2e2 SHA256 470139083fdd3e4cf4ef61c3b91bdecbc22356aacd3fff2f5d9444a53a94dde0
+EBUILD parole-0.2.0.5.ebuild 1090 RMD160 f8fa254f9dafc668d5e5c89bac23b0175ebbaa4e SHA1 e2cdfbc5afdcd88a7a946ae5826a951f84fc8c3c SHA256 d75f6678fe020e1cf0595b6ea5eae2f9bedaa62c786f753cfafb779cec0b1692
+MISC ChangeLog 2742 RMD160 0046b60c14bbadbf31cc25d5f34542e200dc8efb SHA1 20d3853be257698ba67b26970a8df36416d2b547 SHA256 e47486cf7a377e7c91836902e4937807dd2193a58d0bb1c08c5b91b394011947
 MISC metadata.xml 159 RMD160 43722935bd7b4db7fe8db681054f2e53c4a5f7ce SHA1 15958ad72e234ba572c9534533c21532eb6bc0fd SHA256 900ea49b6703fce452e205b85226bf1f994725963e5840da501182e7487d0e63
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iF4EAREIAAYFAk2opU0ACgkQmWq1bYTyC0MiNAEAiKrMSvxT3ZCt+KBwIAju9QG6
+5beXWZw5zmbHCkz+P5oBALlhp2zOKG6JFyAGmsLt1hPytJWBrEWp9kVAbu3CbUOU
+=LnqK
+-----END PGP SIGNATURE-----
