@@ -1,6 +1,11 @@
 # ChangeLog for media-video/parole
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/parole/ChangeLog,v 1.15 2011/02/05 11:27:08 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/parole/ChangeLog,v 1.16 2011/04/15 20:06:34 angelos Exp $
+
+*parole-0.2.0.5 (15 Apr 2011)
+
+  15 Apr 2011; Christoph Mende <angelos@gentoo.org> +parole-0.2.0.5.ebuild:
+  Version bump
 
   05 Feb 2011; Samuli Suominen <ssuominen@gentoo.org> parole-0.2.0.2-r1.ebuild,
   +files/parole-0.2.0.2-libnotify-0.7.patch:
